# yolo-workspace

./: .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: CORE_CONCEPTS.md
src/vision_workspace/: __init__.py  check_environment.py  cli_helpers.py  create_dataset.py  evaluate_experiment.py  export_onnx.py  init_experiment.py  init_project.py  run_inference.py  train_model.py  visualize_labels.py
