[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vision-workspace"
version = "0.1.0"
description = "Utilities and workflows for the vision workspace."
readme = "README.md"
requires-python = ">=3.10"

[project.scripts]
init-project = "vision_workspace.init_project:main"
create-dataset = "vision_workspace.create_dataset:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
